--- a/Assets/cssinicio/navegacion.css
+++ b/Assets/cssinicio/navegacion.css
@@ -1,4 +1,5 @@
-*,
+
+*p,
 *:before,
 *::after {
     box-sizing: border-box;
@@ -12,7 +13,7 @@ body {
 }
 
 :root {
-    --colorMenu: #E6AD09;
+    --colorMenu: #ffd65b;
     --colorFondoSubMenu: #000000c2;
     --colorSubMenu: #ffffff;
     --colorBarraEnlace: #ff0000;
@@ -72,9 +73,10 @@ body {
     color: var(--colorMenupc);
 }
 
-.menu .menu__link {
+ .menu__link {
     color: var(--colorMenu);
 }
+
 
 .submenu .menu__link {
     color: white;
@@ -158,7 +160,7 @@ header {
 
 header.down {
     background: rgb(255, 255, 255);
-    color: black;
+
     position: fixed;
     top: 0;
     left: 0;
@@ -166,9 +168,6 @@ header.down {
     padding: 5px 0;
 }
 
-.enlacesDown {
-    color: var(--colorMenupc)
-}
 
 header .brand {
     color: rgb(82, 8, 201);
@@ -178,6 +177,12 @@ header .brand {
     text-decoration: none;
     letter-spacing: 2px;
 }
+
+.menu .menu__link .enlacesDown {
+    color: red;
+}
+
+
 
 .container {
     width: 90%;
