--- a/Assets/cssinicio/navegacion.css
+++ b/Assets/cssinicio/navegacion.css
@@ -1,5 +1,3 @@
-
-*p,
 *:before,
 *::after {
     box-sizing: border-box;
@@ -13,7 +11,7 @@ body {
 }
 
 :root {
-    --colorMenu: #ffd65b;
+    --colorMenu: #ffffff;
     --colorFondoSubMenu: #000000c2;
     --colorSubMenu: #ffffff;
     --colorBarraEnlace: #ff0000;
@@ -34,13 +32,16 @@ body {
     --textoNagadorHover: #B36036;
 }
 
+/* barra de celular */
 .nav-bar {
-    /*color de icono*/
     display: block;
     color: var(--colorMenu);
     cursor: pointer;
-    font-size: 17px;
+    font-size: 10px;
     width: 100%;
+    padding: 10px 20px;
+    display: flex;
+    justify-content: flex-end;    
 }
 
 .menu,
@@ -53,7 +54,6 @@ body {
 .menu {
     display: none;
     width: 100%;
-    /*ddd*/
     margin-left: -100%;
 }
 
@@ -67,19 +67,18 @@ body {
 
 .menu__link {
     display: block;
-    padding: 10px 0px;
-    font-size: 17px;
-    text-decoration: none;
-    color: var(--colorMenupc);
-}
-
- .menu__link {
+    padding: 5px 0px;
+    padding-left: 20px;
+    font-size: 13px;
     color: var(--colorMenu);
 }
 
+.menu__link:hover{
+    text-decoration: none;
+}
 
 .submenu .menu__link {
-    color: white;
+    color: var(--colorMenu);
 }
 
 .submenu {
@@ -88,7 +87,8 @@ body {
     overflow: hidden;
 }
 
-.submenu .menu__item a {
+.submenu .menu__item a
+{
     padding-left: 15px;
     background-color: var(--colorTextoEnlacesySubEnlaces);
 }
@@ -134,7 +134,7 @@ body {
     }
     .submenu {
         position: absolute;
-        top: 40px;
+        top: 30px;
         width: 250px;
         /*ancho de sub enlace*/
         overflow: visible;
@@ -145,6 +145,9 @@ body {
     .container-submenu:hover .submenu {
         opacity: 1;
         visibility: visible;
+    }
+    .menu__link {
+        padding-left: 0px;
     }
 }
 
@@ -171,10 +174,9 @@ header.down {
 
 header .brand {
     color: rgb(82, 8, 201);
-    font-size: 30px;
+    font-size: 10px;
     font-weight: 700;
     text-transform: uppercase;
-    text-decoration: none;
     letter-spacing: 2px;
 }
 
