--- a/Assets/cssinicio/sliderSwiper.css
+++ b/Assets/cssinicio/sliderSwiper.css
@@ -1,6 +1,14 @@
 .swiper {
-    width: 1400px;
-    height: 500px;
+    width: 98%;
+    height: 200px;
+}
+
+@media(min-width:1024px) {
+    .swiper {
+        width: 98%;
+        height: 500px;
+    }
+
 }
 
 .swiper-slide {
@@ -23,14 +31,14 @@
 
 .swiper-slide img {
     display: block;
-    width: 100%;
-    height: 400px;
+    width: 95%;
+    height: 200px;
 }
 
 @media(min-width:1024px) {
     .swiper-slide img {
         display: block;
-        width: 190%;
+        width: 95%;
         height: 600px;
     }
 }
