--- a/assetsexpoferia/css/style.css
+++ b/assetsexpoferia/css/style.css
@@ -127,7 +127,7 @@ h6 {
 
 #header.header-scrolled {
     background: linear-gradient(45deg, #FFC107, #FFC107);
-    height: 70px;
+    height: 60px;
     transition: all 0.5s;
     padding: 45px 0;
 }
@@ -435,6 +435,7 @@ h6 {
 --------------------------------------------------------------*/
 
 #hero {
+    margin-top: 50px;
     width: 100%;
     height: 100vh;
     /*background: red;*/
@@ -445,6 +446,7 @@ h6 {
 
 @media (min-width: 1025px) {
     #hero {
+    
         background-attachment: fixed;
     }
 }
@@ -453,6 +455,7 @@ h6 {
     #hero {
         /*tamaño de celular*/
         height: 70vh;
+      
     }
 }
 
