--- a/Assets/css/cssjp.css
+++ b/Assets/css/cssjp.css
@@ -232,8 +232,22 @@ header .brand {
   }
 }
 
+.input{
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  border: 1px solid #000000;
+  padding: 0 4px 0 4px;  
+}
+
+a:link, a:visited, a:active {
+  text-decoration:none;
+}
+
+/* footer*/
+
 .cont-info {
-  width: 90%;
+  max-width: 200px;
   margin: auto;
   margin-top: 10px;
   border-radius: 20px;
