--- a/Assets/cssinicio/sliderSwiper.css
+++ b/Assets/cssinicio/sliderSwiper.css
@@ -1,43 +1,73 @@
 .swiper {
     width: 98%;
-    height: 300px;
+    height: 270px;
 }
 
 
 .swiper-slide img {
     display: block;
     width: 95%;
-    height: 300px;
+    height: 270px;
 }
 
 
-
-
- @media(min-width:1200) {
+@media(min-width:800px) {
     .swiper {
         width: 86%;
-        height: 550px;
+        height: 400px;
     }
     .swiper-slide img {
         display: block;
         width: 86%;
-        height: 550px;
+        height: 400px;
     }
 
 }
 
-@media(min-width:1400px) {
+
+
+@media(min-width:1000px) {
     .swiper {
         width: 86%;
-        height: 730px;
+        height: 400px;
     }
     .swiper-slide img {
         display: block;
         width: 86%;
-        height: 730px;
+        height: 400px;
     }
 
 }
+
+
+
+@media(min-width:1200px) {
+    .swiper {
+        width: 86%;
+        height: 450px;
+    }
+    .swiper-slide img {
+        display: block;
+        width: 86%;
+        height: 450px;
+    }
+
+}
+
+@media(min-width:1300px) {
+    .swiper {
+        width: 86%;
+        height: 500px;
+    }
+    .swiper-slide img {
+        display: block;
+        width: 86%;
+        height: 500px;
+    }
+
+}
+
+
 
 
 
