--- a/Assets/cssinicio/sliderSwiper.css
+++ b/Assets/cssinicio/sliderSwiper.css
@@ -1,67 +1,105 @@
-.swiper {
-    width: 98%;
-    height: 300px;
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
 }
 
+.swiper {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.swiper {
+  width: 80%;
+  height: 30vh;
+}
 
 .swiper-slide img {
-    display: block;
-    width: 95%;
-    height: 300px;
+  display: block;
+  width: 80%;
+  height: 30vh;
 }
 
-
-
-
- @media(min-width:1200) {
+@media (min-width: 600px) {
     .swiper {
         width: 86%;
-        height: 550px;
+        height: 40vh;
     }
+    
+    
     .swiper-slide img {
         display: block;
         width: 86%;
-        height: 550px;
+        height: 40vh;
     }
-
 }
 
-@media(min-width:1400px) {
+@media (min-width: 800px) {
     .swiper {
         width: 86%;
-        height: 730px;
+        height: 50vh;
     }
+    
+    
     .swiper-slide img {
         display: block;
         width: 86%;
-        height: 730px;
+        height: 50vh;
     }
-
 }
 
 
 
-
-.swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    /* Center slide text vertically */
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    align-items: center;
+@media (min-width: 1000px) {
+    .swiper {
+        width: 86%;
+        height: 65vh;
+    }
+    
+    
+    .swiper-slide img {
+        display: block;
+        width: 86%;
+        height: 65vh;
+    }
 }
 
+@media (min-width: 1200px) {
+    .swiper {
+        width: 88%;
+        height: 70vh;
+    }
+    
+    
+    .swiper-slide img {
+        display: block;
+        width: 88%;
+        height: 70vh;
+    }
+}
 
-.swiper {
-    margin-left: auto;
-    margin-right: auto;
+@media (min-width: 1250px) {
+    .swiper {
+        width: 88%;
+        height: 72vh;
+    }
+    
+    
+    .swiper-slide img {
+        display: block;
+        width: 88%;
+        height: 72vh;
+    }
 }
