--- a/Assets/css/main.css
+++ b/Assets/css/main.css
@@ -17075,7 +17075,7 @@ be a descendant of the grid when it is being dragged.
 }
 
 .user .profile .info {
-    padding: 30px 60px;
+    padding: 30px 20px;
     text-align: center;
     background-color: #fff;
     white-space: nowrap;
@@ -17095,9 +17095,9 @@ be a descendant of the grid when it is being dragged.
     -ms-flex: 1;
     flex: 1;
     background-image: url(../images/banner.jpg);
-    background-size: cover;
-    background-position: center;
-    min-height: 300px;
+    background-size:cover;
+   
+    min-height: auto;
 }
 
 .user .user-tabs {
